--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
-    <!--    <uses-permission android:name="android.permission.WAKE_LOCK" />-->
-
-    <!--    <uses-feature android:name="android.hardware.type.watch" />-->
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity android:name=".InGround" />
         <activity android:name=".SmartBuilding" />
         <activity android:name=".SmartStreet" />
         <activity android:name=".SmartAgriculture" />
