--- a/IoTAssignment/app/build.gradle
+++ b/IoTAssignment/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
 
+    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
