--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".LightProximity"></activity>
+        <activity android:name=".LightProximity" />
         <activity android:name=".SmartAgriculture" />
         <activity android:name=".ParkingSensor" />
         <activity android:name=".InGround" />
