--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MyApplication">
 
         <activity android:name=".SmartDoor" />
-        <activity android:name=".cctv" />
+        <activity android:name=".CCTV" />
 
         <activity android:name=".LightProximity" />
         <activity android:name=".SmartAgriculture" />
