--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-
+        <activity android:name=".TemperatureHumidity"></activity>
+        <activity android:name=".SoilHumidity" />
         <activity android:name=".SmartDoor" />
         <activity android:name=".CCTV" />
-
         <activity android:name=".LightProximity" />
         <activity android:name=".SmartAgriculture" />
         <activity android:name=".ParkingSensor" />
