--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".TemperatureHumidity"></activity>
+
+        <activity android:name=".TemperatureHumidity" />
         <activity android:name=".SoilHumidity" />
         <activity android:name=".SmartDoor" />
         <activity android:name=".CCTV" />
