--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-
+        <activity android:name=".HumanDetection"></activity>
         <activity android:name=".TemperatureHumidity" />
         <activity android:name=".SoilHumidity" />
         <activity android:name=".SmartDoor" />
