--- a/IoTAssignment/app/src/main/AndroidManifest.xml
+++ b/IoTAssignment/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
-        <activity android:name=".smartDoorSecurity"></activity>
+        <activity android:name=".IntruderDetection"></activity>
+        <activity android:name=".smartDoorSecurity" />
         <activity android:name=".SmartLighting" />
         <activity android:name=".HumanDetection" />
         <activity android:name=".TemperatureHumidity" />
